# nnlp

./: .editorconfig  .gitignore  .style.yapf  SConstruct  go.work  install_openfst.sh  meson.build
egs/common/util/: add_selfloop.sh  build_lexicon_fst.sh  convert_fst_to_json.sh  lexicon_add_ilabel_selfloop.py
egs/wordseg/: run.py  run.sh
egs/wordseg/local/: build_breaker_fst.py  jieba_dict_to_lexicon.py  lexicon_additional_selfloop.txt  test_wordseg.py
egs/zh_t2s/local/: test_t2s.py
egs/zhconv/: README.md  run.py  run.sh
egs/zhconv/local/: convert_fst_to_json.py  test_t2s.py
egs/zhconv/util/: draw_fst.sh
src/: SConstruct
src/cpp/nnlp_tools/: SConstruct  fstrmepslocal.cc
src/go/capi/: go.mod  handle_table.go  nfst_api.c  nfst_api.go  nfst_api.h
src/go/errors/: go.mod  invalid_argument.go  key_error.go  unexpected.go
src/go/nfst/: fst.go  go.mod  read.go  write.go
src/go/nmutfst/: arc.go  arc_iterator.go  constants.go  go.mod  mutable_fst.go  mutable_fst_test.go  nfst_builder.go  openfst_cwrapper.cc  openfst_cwrapper.h  symbol.go  symbol_table.go  test_util.go
src/go/nnlp/: decoder.go  go.mod
src/go/nregex/: ast.go  closure_expr.go  expr.go  expr_test.go  go.mod  grammar.go  literal_expr.go  parallel_expr.go  parser.go  range_expr.go  reader.go  ref_expr.go  util.go
src/go/openfst/: go.mod  wrapper.cc  wrapper.go  wrapper.h
src/python3/nnlp/: __init__.py  __main__.py  bnf_tokenizer.py  cli.py  cmd.py  converter.py  decoder.py  fst.py  fst_generator.py  lexicon_fst_generator.py  segmenter.py  symbol.py  util.py
src/python3/nnlp_tools/: __init__.py  __main__.py  bnf_tokenizer.py  cli.py  common.py  fst_generator.py  fst_util.py  fst_writer.py  grammar.py  grammar_fst_builder.py  lexicon_fst_builder.py  lexicon_fst_generator.py  rule.py  (+4 more)
tools/: jieba_dict_to_lexicon.py
(+14 files in other folders)
